# AnanasAssembler

./: CMakeLists.txt  LICENSE.txt  Makefile  Makefile_auto  README  README.md  README_cola  configure  notes  test_ananas
aligns/: KmerDynProg.cc
ananas_test/: reads_redun.fasta  reads_rep.fasta  small.fasta
ananas_test/baseline_reads_rep/: allOverlaps.out  consensusReads.out  contigs.fasta.all_done  contigs.layout  contigs_altsplic.fasta  contigs_altsplic.layout  final.fa  scaffolds.layout  scaffolds.layout.iter.2  scaffolds.layout.iter.3
ananas_test/baseline_reads_splic/: allOverlaps.out  consensusReads.out  contigs.fasta  contigs.layout  contigs_altsplic.layout  final.fa  scaffolds.layout.iter.0  scaffolds.layout.iter.2  scaffolds.layout.iter.4
ananas_test/test_rep/: allOverlaps.out  contigs_altsplic.layout  pairSz.tmp  scaffolds.layout.iter.2
ananas_test/test_splic/: contigs.layout  pairSz.tmp  scaffolds.layout.iter.3
base/: WebServer.cc  WebServer.h
data/: Tangerine_index.html  please_wait.html
data/assembler/: reads_splic.fasta  solution_splic.fasta
docs/: README.md  index.html  paper_notice.html  quick_start.html
documentation/: AnanasManual.odt
math/: Spearman.h
prototype/: ParseGroupHomology.cc  TestScoring.cc
samples/: dog.X.part.short.fasta  human.X.part.short.fasta
scripts/RealData/: Reads_Count_Statistics.pl  RealData_Ananas_Pipeline.sh  RealData_Trinity_Pipeline.sh  Trinity_GetSpecificContigs.pl
scripts/SimulatedData/: 1A_FormatFiles_CompleteDatasets.sh  1B_FormatFiles_Subsets.sh  2_AnanasPipeline.sh  2_TrinityPipeline.sh  3_Statistics_Ananas.sh  3_Statistics_Trinity.sh  Ananas_GetContigsLength.pl  Ananas_downstream.pl  Extract_ReadSubset_fromFasta.pl  Statistics_BlastDowstream.pl  Statistics_BlastGetBpGaps.pl  Trinity_GetContigsLength.pl  Trinity_blast_downstream.pl
smorgas_server_data/: FAQ.html  Results.html  Tangerine_index.html  config.txt  config_fp.txt  plant_colors.txt  please_wait.html  run  run_fp  run_plants  run_te  starting.html
smorgas_test/: TE.fasta  query_prot.fasta  tinydb.fasta  transc.fasta  transc_db.prot  transposon_db.pep_noStop
smorgas_test/reference/: te.out  tiny.out  trans.out
src/: AddReadCounts.cc  AlignProbability.cc  AlignProbability.h  Alignment.cc  Alignment.h  Ananas.cc  AssemblyParams.h  AssignGeneNames.cc  Bin2AsciiOverlaps.cc  BuildReadGroups.cc  ChainMatches.cc  CleanFastq.cc  ClusterByExpression.cc  ClusterContigs.cc  CollectOutput.cc  ConsensOverlapUnit.cc  ConsensOverlapUnit.h  Consensus.cc  Consensus.h  ContScaff.cc  ContScaff.h  ContScaffIO.cc  ContScaffIO.h  ContigClusterUnit.cc  ContigClusterUnit.h  ConvertReadCounts_temp.cc  DNAVector.cc  DNAVector.h  DPAlign.cc  DPAlign.h  DPAlignFasta.cc  EnumerateSeqs.cc  FilterGridSeeds.cc  FindAlternativeSplicing.cc  FindOverlaps.cc  FindPolyATails.cc  GCContentBySynteny.cc  GenAssemblyFasta.cc  GetTopFromFasta.cc  GridSearch.cc  (+36 more)
src/Ananas/: Ananas.cc  BuildReadGroups.cc  ClusterContigs.cc  ConsensOverlapUnit.cc  ConsensOverlapUnit.h  Consensus.cc  Consensus.h  ContScaff.cc  ContScaff.h  ContScaffIO.cc  ContScaffIO.h  ContigClusterUnit.cc  ContigClusterUnit.h  ConvertReadCounts_temp.cc  EnumerateSeqs.cc  FindAlternativeSplicing.cc  GenAssemblyFasta.cc  GetTopFromFasta.cc  GlobUsage.cc  GlobUsage.h  KmerKonsensus.cc  Layout.cc  LayoutGuided.cc  OverlapStat.cc  ReadOverlap.cc  ReadOverlap.h  Reads.cc  Reads.h  RemoveRedundantSeqs.cc  RunIsoEM.cc  Scaffolder.cc  SearchOverlaps.cc  SearchOverlaps.h  SequenceGraph.cc  SequenceGraph.h  SimplicityFilter.cc  SubReads.h  TestConsPairing.cc  ThreadQueueVec.h  Threads.h  (+1 more)
src/Cola/: AlignmentCola.cc  AlignmentCola.h  README.txt
src/Devel/: ExpNetwork.cc  ExpNetwork.h  RunNetSeq.cc  TestRunNetSeq.cc
src/Optical/: DigestFasta.cc  OptiMap.cc  OptiMap.h  OptiMapAlign.cc
src/Papaya/: KmerHash.cc  KmerHash.h  KmerTable.cc  NonRedKmerTable.cc  NonRedKmerTable.h  Papaya.cc  PapayaDetails.cc  PapayaSeed.cc  TranscriptomeFromVaryK.cc
src/Saguaro/: Cactus.cc  Cactus.h  ClusterCacti.cc  Dist2Feature.cc  Fasta2HMMFeature.cc  FilterCacti.cc  Genotype2HMMFeature.cc  HMMClassify.cc  HMMDecode.cc  HMMDecode.h  HMMDistance.cc  HMMDistance.h  HMMTrain.cc  LocalTrees.cc  Maf2HMMFeature.cc  SOM.cc  SOM.h  Saguaro.cc  VCF2HMMFeature.cc
src/Satsuma/: BlockDisplaySatsuma.cc  ColaAlignSatsuma.cc  FindAllAlignments.cc  MergeScaffoldsBySynteny.cc  MultiZ2Satsuma.cc  OrderOrientBySynteny.cc  RefineSatsuma.cc  RefineSatsuma.h  Satsuma.cc  SatsumaAlign.cc  SatsumaStruct.cc  SatsumaSynteny.cc  SatsumaToFasta.cc  XCorrDynProg.cc  XCorrDynProg.h
src/Smorgas/: ProtNameCluster.cc  ProtNameCluster.h  ProtServer.cc  SatsumaProt.cc  SatsumaProt.h  (+4 more)
test/: Makefile  README  ReadSimulator.cc  ReadSimulator.h  TestDNAVector.cc  TestMultiAlloc.cc  TestNameClustering.cc  TestOverlaps.cc  TestStreamParser.cc  TestSyncComm.cc  TestThreadHandler.cc  TestWebServer.cc
test_data/: some_critters
tools/: AddTaxonomyFasta.cc  AnanasTopFasta.cc  BreakScaffolds.cc  BundleRSEM.cc  CactiCorrelate.cc  CheckIntegrity.cc  CountExpression.cc  CountLoci.cc  CountMultiExonic.cc  EliminateRedundantFasta.cc  ExtractLocusMappingFromGTF.cc  ExtractMappingFromGTF.cc  FPKMCorrelate2Phylip.cc  FPKMStatsForSubset.cc  FastaFromFastq.cc  FastaFromSatsuma.cc  FindFamilies.cc  FindPrimersInReads.cc  FixSpliceJunctions.cc  GCContentAll.cc  GTF2Fasta.cc  GTFComparisonStats.cc  GTFMappingStats.cc  GetENS.cc  GetSynonymousMutations.cc  GetUnion.cc  LociFromFPKM.cc  MakeCOLATest.cc  MakeTranscriptClassPipeline.cc  NonCodingOnly.cc  NormalizeFPKMByPurity.cc  ParseSpeciesPair.cc  PrintFastaFromGTF.cc  PrintMultiExonic.cc  PrintSatsumaClusters.cc  ProteinsCorrelate2Phylip.cc  PullFromFasta.cc  RCFasta.cc  ReduceNR.cc  RemoveTranscripts.cc  (+17 more)
util/: mutil.cc
visual/: ChromosomePaint.cc  Color.cc  ColourT1DPathway.cc  ERVMatrix.cc  ExpressionHeatMaps.cc  FakeManhattan.cc  Hox.cc  MakeSaguaroCircle.cc  MakeSaguaroPlot.cc  MicroSyntenyPlot.cc  PaintT1DPathway.cc  Plot3D.cc  ScatterPlot.cc  ViewContig.cc  VisualAlignments.cc  VisualAlignments.h  runVisualAlignments.cc
(+18 files in other folders)
